--- a/teachers.html
+++ b/teachers.html
@@ -13,23 +13,27 @@
 }
 *{box-sizing:border-box}
 body{
-  font-family: 'Cairo',sans-serif;
-  margin:0;background:linear-gradient(180deg,var(--bg),#fff);
-  color:#102027;direction:rtl;visibility:hidden;
+  font-family:'Cairo',sans-serif;
+  margin:0;
+  background:linear-gradient(180deg,var(--bg),#fff);
+  color:#102027;
+  direction:rtl;
+  visibility:hidden;
 }
 header{
   background:linear-gradient(90deg,var(--primary),#007bff);
-  color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;
+  color:#fff;
+  padding:18px 16px;
+  text-align:center;
+  font-size:20px;
+  font-weight:700;
   box-shadow:0 3px 12px rgba(2,20,40,0.08);
 }
 .wrap{max-width:1200px;margin:22px auto;padding:12px;display:flex;flex-direction:column;gap:18px;}
 .card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
 .form-grid{display:flex;flex-wrap:wrap;gap:10px}
-input[type="text"], input[type="tel"], input[type="number"], select, textarea {
-  padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;
-}
+input[type="text"], input[type="tel"], input[type="number"], select, textarea{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;}
 .two{width:calc(50% - 6px)}
-.three{width:calc(33.333% - 8px)}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
 .btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
 .btn.warn{background:#ff7043}
@@ -44,79 +48,106 @@ th{background:var(--primary);color:#fff}
 .flex{display:flex;gap:12px;flex-wrap:wrap;align-items:flex-start}
 .left,.right{flex:1;display:flex;flex-direction:column;gap:10px}
 .subject-field{display:flex;gap:6px;align-items:center;margin-bottom:6px}
+.modal{position:fixed;left:0;top:0;right:0;bottom:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;}
+.modal.open{display:flex}
+.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
 </style>
 </head>
 <body>
 <header>نظام OMA - إدارة الأساتذة</header>
 <div class="wrap">
 
-  <!-- استمارة الأستاذ -->
-  <div class="card">
-    <div class="flex">
-      <!-- جهة اليمين: معلومات الأستاذ والمواد -->
-      <div class="right">
-        <strong>معلومات الأستاذ</strong>
-        <div class="form-grid">
-          <div class="two">
-            <label>الاسم الكامل</label>
-            <input id="teacherName" type="text" required />
-          </div>
-          <div class="two">
-            <label>رقم الهاتف</label>
-            <input id="teacherPhone" type="tel" required />
-          </div>
-        </div>
-        <div>
-          <label>المواد التي يدرسها</label>
-          <div id="teacherSubjectsContainer"></div>
-          <button id="addTeacherSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
-        </div>
-        <div class="form-grid">
-          <div class="two">
-            <label>المراحل الدراسية</label>
-            <input id="teacherStages" type="text" placeholder="مثال: أولى، ثانية" />
-          </div>
-          <div class="two">
-            <label>المجموعات / الكروبات</label>
-            <input id="teacherGroups" type="text" placeholder="مثال: A, B, 101" />
-          </div>
-        </div>
-        <button id="saveTeacherBtn" class="btn">✅ حفظ الأستاذ</button>
+<!-- استمارة الأستاذ -->
+<div class="card">
+  <strong>أضف/تعديل أستاذ</strong>
+  <form id="teacherForm" style="margin-top:12px">
+    <div class="form-grid">
+      <div class="two">
+        <label>الاسم الكامل</label>
+        <input id="teacherName" type="text" required />
       </div>
-
-      <!-- جهة اليسار: التقرير المالي -->
-      <div class="left">
-        <strong>التقرير المالي</strong>
-        <p>مجموع المبلغ: <span id="totalAmount">0</span></p>
-        <p>مجموع الدفعات المستلمة: <span id="totalPayments">0</span></p>
-        <p>المتبقي للمعهد: <span id="remainingAmount">0</span></p>
+      <div class="two">
+        <label>رقم الهاتف</label>
+        <input id="teacherPhone" type="tel" required />
+      </div>
+      <div style="width:100%">
+        <label>المواد التي يدرسها</label>
+        <div id="teacherSubjectsContainer"></div>
+        <button id="addTeacherSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
+      </div>
+      <div class="two">
+        <label>المراحل الدراسية</label>
+        <input id="teacherStages" type="text" placeholder="مثال: أولى، ثانية" />
+      </div>
+      <div class="two">
+        <label>المجموعات / الكروبات</label>
+        <input id="teacherGroups" type="text" placeholder="مثال: A, B, 101" />
+      </div>
+      <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
+        <button id="saveTeacherBtn" class="btn" type="submit">✅ حفظ الأستاذ</button>
+        <button id="clearTeacherFormBtn" type="button" class="btn ghost">مسح الحقول</button>
       </div>
     </div>
-  </div>
+  </form>
+</div>
 
-  <!-- جدول الدفعات -->
-  <div class="card">
-    <strong>دفعات الأستاذ</strong>
-    <table id="teacherPaymentsTable">
-      <thead>
-        <tr>
-          <th>المادة</th>
-          <th>المبلغ</th>
-          <th>تاريخ الدفعة</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+<!-- قائمة الأساتذة -->
+<div class="card">
+  <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
+    <strong>قائمة الأساتذة</strong>
+    <span id="totalTeachers" class="badge">0</span>
   </div>
+  <table id="teachersTable">
+    <thead>
+      <tr>
+        <th>الاسم</th>
+        <th>الهاتف</th>
+        <th>المراحل</th>
+        <th>الكروبات</th>
+        <th>المواد</th>
+        <th>الإجراءات</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
+<!-- جدول الدفعات -->
+<div class="card">
+  <strong>دفعات الأستاذ</strong>
+  <table id="teacherPaymentsTable">
+    <thead>
+      <tr>
+        <th>المادة</th>
+        <th>المبلغ</th>
+        <th>تاريخ الدفعة</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <div style="margin-top:8px">
+    <p>مجموع المبلغ: <span id="totalAmount">0</span></p>
+    <p>مجموع الدفعات: <span id="totalPayments">0</span></p>
+    <p>المتبقي للمعهد: <span id="remainingAmount">0</span></p>
+  </div>
+</div>
+
+<div id="modal" class="modal">
+  <div class="box">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+      <strong id="modalTitle">تفاصيل الأستاذ</strong>
+      <button id="closeModal" class="btn ghost">إغلاق</button>
+    </div>
+    <div id="modalBody"></div>
+  </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// 🔹 إعداد Firebase
+// إعداد Firebase
 const firebaseConfig = {
   apiKey: "API_KEY_HERE",
   authDomain: "PROJECT_ID.firebaseapp.com",
@@ -125,23 +156,24 @@ const firebaseConfig = {
   messagingSenderId: "SENDER_ID",
   appId: "APP_ID"
 };
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-  } else {
-    document.body.style.visibility = "visible";
-    loadTeacherPayments();
-  }
+onAuthStateChanged(auth, user => {
+  if(!user){ window.location.href="login.html"; }
+  else { document.body.style.visibility="visible"; loadTeachers(); }
 });
 
-// إدارة المواد
+// عناصر الاستمارة
+const teacherForm = document.getElementById("teacherForm");
 const teacherSubjectsContainer = document.getElementById("teacherSubjectsContainer");
-document.getElementById("addTeacherSubjectBtn").addEventListener("click", ()=>{
+const addTeacherSubjectBtn = document.getElementById("addTeacherSubjectBtn");
+const teachersTableBody = document.querySelector("#teachersTable tbody");
+let editingTeacherId = null;
+
+// إضافة مادة
+addTeacherSubjectBtn.addEventListener("click", ()=>{
   const div = document.createElement("div");
   div.classList.add("subject-field");
   div.innerHTML = `
@@ -152,52 +184,110 @@ document.getElementById("addTeacherSubjectBtn").addEventListener("click", ()=>{
   div.querySelector(".removeSubjBtn").addEventListener("click", ()=>teacherSubjectsContainer.removeChild(div));
 });
 
+// مسح الاستمارة
+document.getElementById("clearTeacherFormBtn").addEventListener("click", ()=>{
+  teacherForm.reset(); teacherSubjectsContainer.innerHTML=""; editingTeacherId=null;
+});
+
 // حفظ الأستاذ
-document.getElementById("saveTeacherBtn").addEventListener("click", async ()=>{
+teacherForm.addEventListener("submit", async e=>{
+  e.preventDefault();
   const name = document.getElementById("teacherName").value.trim();
   const phone = document.getElementById("teacherPhone").value.trim();
   const stages = document.getElementById("teacherStages").value.trim();
   const groups = document.getElementById("teacherGroups").value.trim();
-
-  const subjects = [];
-  document.querySelectorAll(".teacherSubjName").forEach(sub=>{
-    const subj = sub.value.trim();
-    if(subj) subjects.push(subj);
-  });
+  const subjects = Array.from(document.querySelectorAll(".teacherSubjName")).map(i=>i.value.trim()).filter(s=>s);
 
   if(!name || !phone || subjects.length===0){ alert("املأ جميع الحقول الأساسية"); return; }
 
   try{
-    await addDoc(collection(db,"teachers"),{
-      name, phone, stages, groups, subjects, createdAt:new Date()
-    });
+    if(editingTeacherId){
+      await updateDoc(doc(db,"teachers",editingTeacherId), {name,phone,stages,groups,subjects});
+      editingTeacherId=null;
+    } else {
+      await addDoc(collection(db,"teachers"), {name,phone,stages,groups,subjects,createdAt:new Date()});
+    }
     alert("تم حفظ الأستاذ بنجاح");
-    document.getElementById("teacherName").value="";
-    document.getElementById("teacherPhone").value="";
-    document.getElementById("teacherStages").value="";
-    document.getElementById("teacherGroups").value="";
-    teacherSubjectsContainer.innerHTML="";
-  }catch(err){console.error(err); alert("خطأ أثناء الحفظ");}
+    teacherForm.reset(); teacherSubjectsContainer.innerHTML="";
+    loadTeachers();
+  } catch(err){console.error(err); alert("خطأ أثناء الحفظ");}
 });
 
-// تحميل الدفعات (مثال وهمي حتى ربطه بقاعدة البيانات)
-async function loadTeacherPayments(){
-  const snapshot = await getDocs(collection(db,"teacherPayments"));
-  const tbody = document.querySelector("#teacherPaymentsTable tbody");
-  tbody.innerHTML="";
-  let totalAmount=0, totalPayments=0;
+// تحميل الأساتذة
+async function loadTeachers(){
+  const snapshot = await getDocs(collection(db,"teachers"));
+  teachersTableBody.innerHTML="";
+  let total=0;
   snapshot.forEach(docSnap=>{
-    const data = docSnap.data();
+    const t = {...docSnap.data(),id:docSnap.id};
+    total++;
     const tr = document.createElement("tr");
-    tr.innerHTML = `<td>${data.subject}</td><td>${data.amount}</td><td>${data.date}</td>`;
-    tbody.appendChild(tr);
-    totalAmount += data.amount;
-    totalPayments += data.paid || 0;
+    tr.innerHTML = `
+      <td>${t.name}</td>
+      <td>${t.phone}</td>
+      <td>${t.stages}</td>
+      <td>${t.groups}</td>
+      <td>${t.subjects.join(", ")}</td>
+      <td class="actions">
+        <button class="btn small" data-id="${t.id}" onclick="editTeacher('${t.id}')">✏️ تعديل</button>
+        <button class="btn warn small" data-id="${t.id}" onclick="deleteTeacher('${t.id}')">🗑️ حذف</button>
+        <button class="btn ghost small" data-id="${t.id}" onclick="showTeacherDetails('${t.id}')">ℹ️ تفاصيل</button>
+      </td>
+    `;
+    teachersTableBody.appendChild(tr);
   });
-  document.getElementById("totalAmount").innerText=totalAmount;
-  document.getElementById("totalPayments").innerText=totalPayments;
-  document.getElementById("remainingAmount").innerText=totalAmount - totalPayments;
+  document.getElementById("totalTeachers").innerText=total;
 }
+
+// تعديل الأستاذ
+window.editTeacher = async id=>{
+  const docSnap = await getDocs(collection(db,"teachers"));
+  docSnap.forEach(d=>{
+    if(d.id===id){
+      const t = d.data();
+      document.getElementById("teacherName").value=t.name;
+      document.getElementById("teacherPhone").value=t.phone;
+      document.getElementById("teacherStages").value=t.stages;
+      document.getElementById("teacherGroups").value=t.groups;
+      teacherSubjectsContainer.innerHTML="";
+      t.subjects.forEach(s=>{
+        const div = document.createElement("div");
+        div.classList.add("subject-field");
+        div.innerHTML = `<input type="text" class="teacherSubjName" value="${s}" /><button type="button" class="btn warn small removeSubjBtn">❌</button>`;
+        teacherSubjectsContainer.appendChild(div);
+        div.querySelector(".removeSubjBtn").addEventListener("click", ()=>teacherSubjectsContainer.removeChild(div));
+      });
+      editingTeacherId=id;
+    }
+  });
+};
+
+// حذف الأستاذ
+window.deleteTeacher = async id=>{
+  if(confirm("هل تريد حذف هذا الأستاذ؟")){
+    await deleteDoc(doc(db,"teachers",id));
+    loadTeachers();
+  }
+};
+
+// عرض التفاصيل في المودال
+window.showTeacherDetails = async id=>{
+  const docSnap = await getDocs(collection(db,"teachers"));
+  let tData=null;
+  docSnap.forEach(d=>{ if(d.id===id) tData=d.data(); });
+  if(!tData) return;
+  const modal=document.getElementById("modal");
+  const body=document.getElementById("modalBody");
+  body.innerHTML=`
+    <p><strong>الاسم:</strong> ${tData.name}</p>
+    <p><strong>الهاتف:</strong> ${tData.phone}</p>
+    <p><strong>المراحل:</strong> ${tData.stages}</p>
+    <p><strong>الكروبات:</strong> ${tData.groups}</p>
+    <p><strong>المواد:</strong> ${tData.subjects.join(", ")}</p>
+  `;
+  modal.classList.add("open");
+};
+document.getElementById("closeModal").addEventListener("click", ()=>document.getElementById("modal").classList.remove("open"));
 </script>
 </body>
 </html>
